Fixed video-gallery feature thumbnail being too wide.

--- a/assets/styles/section-styles.css
+++ b/assets/styles/section-styles.css
@@ -331,7 +331,7 @@
 /* video gallery styles */
 .template--video-gallery__inner {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   background-color: var(--ultra-dark-gray);
   color: var(--light-gray);
 }
@@ -352,7 +352,8 @@
 .template--video-gallery__inner
   .section__news-item--feature
   .section__news-item__thumbnail {
-  max-height: 450px;
+  width: 100%;
+  height: auto;
   aspect-ratio: 16 / 9;
   object-fit: cover;
 }
@@ -382,7 +383,7 @@
 .video-gallery__video {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 4px;
+  grid-gap: 8px;
 }
 .video-gallery__thumbnail {
   width: 100%;
